fixato overflow body

--- a/ex-2/resources/sass/app.scss
+++ b/ex-2/resources/sass/app.scss
@@ -37,7 +37,7 @@ footer {
 }
 
 main {
-  width: 100vw;
+  width: 100%;
   min-height: calc(100vh - 160px);
   padding: 20px;
   display: flex;
